# benchmark

./: .dockerignore  .gitignore  Dockerfile.cuda  README.md  pyproject.toml  run.sh
configs/: pii-redaction.json
datasets/: pii_multilang.jsonl
docs/: mlx-final-optimization-summary.md  mlx-integration-notes.md
pii_benchmark/: __init__.py  cli.py  config.py  dataset.py  hardware.py  models.py  report.py  runner.py  tokenize.py
scripts/: run_auto.sh  run_docker_cuda.sh  run_jetson.sh  run_local_uv.sh  run_system.sh
tests/: test_mlx_adapter.py  test_regex_adapter.py  test_report.py  test_tokenize.py
